css/code.css
@font-face {
    font-family: 'FreeMono-lean';
    src: url('../fonts/FreeMono.eot');
    src: url('../fonts/FreeMono.eot?#iefix') format('embedded-opentype'),
         url('../fonts/FreeMono.woff2') format('woff2'),
         url('../fonts/FreeMono.woff') format('woff'),
         url('../fonts/FreeMono.ttf') format('truetype'),
         url('../fonts/FreeMono.svg') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'FreeMono-lean';
    src: url('../fonts/FreeMonoBold.eot');
    src: url('../fonts/FreeMonoBold.eot?#iefix') format('embedded-opentype'),
         url('../fonts/FreeMonoBold.woff2') format('woff2'),
         url('../fonts/FreeMonoBold.woff') format('woff'),
         url('../fonts/FreeMonoBold.ttf') format('truetype'),
         url('../fonts/FreeMonoBold.svg') format('svg');
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: 'DejaVuSansMono-lean';
    src: url('../fonts/DejaVuSansMono.eot');
    src: url('../fonts/DejaVuSansMono.eot?#iefix') format('embedded-opentype'),
         url('../fonts/DejaVuSansMono.woff2') format('woff2'),
         url('../fonts/DejaVuSansMono.woff') format('woff'),
         url('../fonts/DejaVuSansMono.ttf') format('truetype'),
         url('../fonts/DejaVuSansMono.svg') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'DejaVuSansMono-lean';
    src: url('../fonts/DejaVuSansMono-Bold.eot');
    src: url('../fonts/DejaVuSansMono-Bold.eot?#iefix') format('embedded-opentype'),
         url('../fonts/DejaVuSansMono-Bold.woff2') format('woff2'),
         url('../fonts/DejaVuSansMono-Bold.woff') format('woff'),
         url('../fonts/DejaVuSansMono-Bold.ttf') format('truetype'),
         url('../fonts/DejaVuSansMono-Bold.svg') format('svg');
    font-weight: bold;
    font-style: normal;
}

#juicy-ace-editor-container {
    font-family: 'FreeMono-lean', 'DejaVuSansMono-lean', Monaco, Menlo, 'Ubuntu Mono', 'Arial Unicode MS', Consolas, source-code-pro, monospace;
    line-height: inherit;
    margin-top:20px;
    margin-bottom:20px;
}

